[nrf fromlist] boards: nordic: thingy53: add missing edge conn spi to cpunet
The edge-connector spi node is missing from the dts of cpunet. This
missing node causes undefined node issues when building for the
cpunet core with the nrf7002eb shield enabled, since it depends on
the spi node.

Signed-off-by: Bjarki Arge Andreasen <bjarki.andreasen@nordicsemi.no>

Upstream PR: https://github.com/zephyrproject-rtos/zephyr/pull/78486

--- a/boards/nordic/thingy53/thingy53_nrf5340_cpunet.dts
+++ b/boards/nordic/thingy53/thingy53_nrf5340_cpunet.dts
@@ -141,6 +141,15 @@
 	};
 };
 
+edge_connector_spi: &spi4 {
+	compatible = "nordic,nrf-spim";
+	status = "okay";
+	cs-gpios = <&edge_connector 18 GPIO_ACTIVE_LOW>;
+	pinctrl-0 = <&spi4_default>;
+	pinctrl-1 = <&spi4_sleep>;
+	pinctrl-names = "default", "sleep";
+};
+
 &ieee802154 {
 	status = "okay";
 };
